<resources>
    <string name="app_name">Assignment3</string>
    <string name="title_home">Home</string>
    <string name="title_mvvm">MVVM</string>
    <string name="title_mvp">MVP</string>
    <string name="second_input">Second Input</string>
    <string name="first_input">First Input</string>
    <string name="result">Result</string>
    <string name="add">Add</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
</resources>