<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/x_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/first_input"
            android:inputType="number"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/y_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/second_input"
            android:inputType="number"
            android:autofillHints=""
            />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

        <Button
            android:id="@+id/sub_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"/>

        <Button
            android:id="@+id/mul_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"/>

        <Button
            android:id="@+id/div_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>